# playground

./: .gitignore  README  readme.md
MNKnowledgeBrainTeaser/20210628_din/: din.nim  readme.md
MNKnowledgeBrainTeaser/20210705_fibonacci/: fibonacci.cpp  readme.md
MNKnowledgeBrainTeaser/20210712_unique/: readme.md  unique2.cpp  unique3.cpp
MNKnowledgeBrainTeaser/20210719_2021/: 2021.rb  readme.md
advent-of-code/: readme.md
advent-of-code/2020/: readme.md
advent-of-code/2021/: readme.md
eloquent-java-script/: README.md
eloquent-java-script/Chapter 02 - Program Structure/: ex1.js  ex2.js  ex3.js
eloquent-java-script/Chapter 03 - Functions/: ex1.js  ex2.js  ex3.js
eloquent-java-script/Chapter 04 - Data Sructures - Objects and Arrays/: ex1.js  ex2.js  ex3.js  ex4.js  (+1 more)
exercism/: .gitignore  readme.md
fmi/: README.md  readme.md
htdp-second-edition/: 001.rkt  004.rkt  006.rkt  007.rkt  008.rkt  009.rkt  010.rkt  014.rkt  016.rkt  017.rkt  021.rkt  022.rkt  023.rkt  024.rkt  026.rkt  031.rkt  readme.md
pie-4th-edition/: readme.md
programming-in-lua/: README  readme.md
project-euler/: README  p16.py  p18.d  p21f.d  p22.d  p28.d  p29.py  p32.d  p33.d  p34.nim  p35.d  p35fast.d  p37.d  p38.cpp  p39.d  p40.d  p41.cpp  p45.py  p47fast.d  p48.py  p49.d  p49fast.d  p55.d  p56.py  p92.d  p97.cpp  primes.d  readme.md
rust/first-steps-with-rust/13_rusty_journal/: Cargo.toml
rust/first-steps-with-rust/13_rusty_journal/src/: cli.rs  main.rs  tasks.rs
stanford-algorithms-class/: README  hw1.d  hw1.html  hw2.d  inversions.d  quicksort.d  readme.md
(+663 files in other folders)
